Changes to support OpenShift deployment